Adding update method to update person model
