# routes/api.php
@@ -8,6 +8,7 @@ Route::controller(PersonController::class)->group(function () {
     Route::post('/person/getPersonById', 'getPersonById');
     Route::post('/person/store', 'store');
     Route::post('person/search', 'search');
+    Route::put('/person/update', 'update');
 });
 
 Route::controller(DisabledPersonController::class)->group(function () {
